# snake

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  test.cpp
src/: agent.cpp  agent.hpp  main.cpp  snake.cpp  snake.hpp
